# sparser

./: .env.dist  .gitignore  .readthedocs.yaml  Dockerfile  README.md  changelog.md  changelog.rst  check_updates.py  console.py  index.toml  mkdocs.yaml  mkdocs.yml  pyproject.toml  requirements.txt  sp.py  spcli.py  spm_console.py  telegram.py  tparser.py  update_checker.py
docs/: changelog.md  conf.py  contribute.md  contributing.rst  develop.md  index.md  index.rst  install.md  install.rst
docs/api/: counter.md  db.md  enums.md  index.md  intents.md  schedule.md  timetable.md  updates.md
docs/api/provider/: base.md  google.md  index.md
docs/api/view/: base.md  index.md  messages.md
docs/sp/: counter.md  counters.rst  enums.md  enums.rst  exceptions.rst  index.md  index.rst  intents.rst  messages.rst  parser.rst  platform.rst  text_counter.rst  utils.md  utils.rst  version.md
docs/sp/users/: index.rst  intents.rst  storage.rst
docs/usage/: class.md  counters.md  index.md  index.rst  next.md  notify.md  query.md  quick_start.rst  requests.rst  schedule.md  set_class.rst  start.md  updates.md
docs/wrappers/: cli.md  cli.rst  index.md  index.rst  telegram.md  vk.md
provider/: app.py  provider.py  types.py
server/: go.mod  go.sum
server/cmd/: main.go
server/handlers/: schedule.go  status.go
server/provider/: debug.go  schedule.go
sp/: __init__.py  counter.py  counters.py  day.py  db.py  enums.py  exceptions.py  filters.py  index.py  intents.py  lesson.py  messages.py  parser.py  platform.py  provider.py  schedule.py  spm.py  text_counter.py  timetable.py  types.py  updates.py  users.py  utils.py  version.py
sp/counter/: __init__.py  base.py  current.py  text.py
sp/dev/: enums.py  intents.py  schedule.py
sp/dev/storage/: base.py  json.py
sp/provider/: __init__.py  base.py  google.py  json.py
sp/provider/cache/: base.py  json.py
sp/users/: intents.py  storage.py
sp/view/: __init__.py  base.py  messages.py
sp3/: chio_plugin.py  console.py  sparser.py
sp3/sparser/: sparser.py
sp_server/: __init__.py  main.py  provider.py  schedule.py
sp_tg/: __init__.py  __main__.py  bot.py  filters.py  keyboards.py  messages.py
sp_tg/handlers/: __init__.py  counters.py  intents.py  notify.py  request.py  schedule.py  set_class.py  tutorial.py  updates.py
sp_tg/utils/: days.py  intents.py  menu.py
sp_vk/: __main__.py  bot.py  config.py  keyboards.py  messages.py  middleware.py
sp_web/: main.py
sparser/: console.py  packages.toml  sparser.py  telegram.py
spbot/: __main__.py  bot.py  config.py
tg/: __init__.py  __main__.py  bot.py  config.py  db.py  filters.py  keyboards.py  middleware.py
tg/handlers/: __init__.py  counters.py  errors.py  intents.py  menu.py  notify.py  request.py  schedule.py  set_class.py  updates.py
tparser/: console.py  packages.toml  telegram.py  tparser.py
