# Версионирование проекта ----------------------------------------------

[tool.sp]
version = "v6.4"
build = 247
api_version = 6

# main -----------------------------------------------------------------

[tool.poetry]
name = "sp"
version = "6.4"
description = "latform for working with class schedules."
authors = ["Milinuri Nirvalen <pentergust@mail.ru>"]
license = "GPL-3.0-or-later"
readme = ["README.md", "docs/index.rst"]
repository = "https://codeberg.org/Salormoon/Sparser"
documentation = "https://sparser.readthedocs.io/ru/latest/"


# Main depencies -------------------------------------------------------

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
loguru = "^0.7.3"
ujson = "^5.10.0"
click = "^8.1.8"
openpyxl = "^3.1.5"


# For dev depencies ----------------------------------------------------

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.4"
ruff = "^0.9.3"
mypy = "^1.14.1"


# For building docs with sphinx ----------------------------------------

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-copybutton = "^0.5.2"
sphinx-book-theme = "^1.1.2"


# For Telegram bot Platform --------------------------------------------

[tool.poetry.group.telegram.dependencies]
aiogram = "^3.2.0"
python-dotenv = "^1.0.0"


# Configure Ruff -------------------------------------------------------

[tool.ruff]
line-length = 80
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
select = ["W", "E", "F", "I", "D", "N", "PL", "UP", "ANN"]
ignore = ["D407", "D413", "D107", "D213", "D203", "ANN101", "ANN102"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
