[project]
name = "sp"
version = "6.5"
description = "Platform for working with class schedules."
requires-python = ">=3.11"
authors = [{ name = "Milinuri Nirvalen", email = "pentergust@mail.ru>" }]
license = "GPL-3.0-or-later"
readme = "README.md"
# TODO: Migrate to aiosqlite
# TODO: Migrate to orjson
dependencies = [
    "asyncpg>=0.30.0",
    "asyncpg-stubs>=0.30.2",
    "click>=8.2.1",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "requests>=2.32.5",
    "tortoise-orm>=0.25.1",
    "ujson>=5.11.0",
]

# Версия проекта -------------------------------------------------------

[tool.sp]
version = "v6.5"
build = 267
api_version = 7

# Other dependencies --------------------------------------------------- 

# TODO: Migrate to mkdocs
# TODO: Migrate to pydantic-settings
[dependency-groups]
dev = ["pyright>=1.1.404", "ruff>=0.12.11"]
docs = ["sphinx>=8.2.3", "sphinx-book-theme>=1.1.4"]
telegram = ["aiogram>=3.22.0", "python-dotenv>=1.1.1"]
